# openai-cpp

./: .gitignore  CMakeLists.txt  README.md
apps/: chat_demo.cpp  demo.cpp  image_demo.cpp  responses_audio_demo.mm
docs/: ARCHITECTURE.md  PARITY_CHECKLIST.md  RESPONSES_PORT_PLAN.md  TESTING.md  TODO_TESTING.md
include/: openai.hpp
include/openai/: assistant_stream.hpp  assistants.hpp  audio.hpp  azure.hpp  batches.hpp  beta.hpp  chat.hpp  chat_stream.hpp  chatkit.hpp  client.hpp  completions.hpp  containers.hpp  conversations.hpp  embeddings.hpp  error.hpp  evals.hpp  files.hpp  fine_tuning.hpp  graders.hpp  http_client.hpp  images.hpp  logging.hpp  messages.hpp  models.hpp  moderations.hpp  pagination.hpp  response_stream.hpp  responses.hpp  run_steps.hpp  runs.hpp  streaming.hpp  thread_types.hpp  threads.hpp  uploads.hpp  vector_stores.hpp  videos.hpp  webhooks.hpp
include/openai/utils/: base64.hpp  env.hpp  multipart.hpp  platform.hpp  qs.hpp  time.hpp  to_file.hpp  uuid.hpp  values.hpp
include/openai/webhooks/: events.hpp
src/: assistant_stream.cpp  assistants.cpp  audio.cpp  azure.cpp  batches.cpp  beta.cpp  chat.cpp  chatkit.cpp  client.cpp  containers.cpp  conversations.cpp  evals.cpp  files.cpp  fine_tuning.cpp  http_client.cpp  images.cpp  logging.cpp  messages.cpp  moderations.cpp  response_stream.cpp  responses.cpp  run_steps.cpp  runs.cpp  streaming.cpp  threads.cpp  uploads.cpp  vector_stores.cpp  videos.cpp  webhooks.cpp
src/utils/: base64.cpp  env.cpp  multipart.cpp  platform.cpp  qs.cpp  time.cpp  to_file.cpp  uuid.cpp  values.cpp
tests/: CMakeLists.txt  assistant_stream_test.cpp  assistants_test.cpp  audio_test.cpp  azure_test.cpp  batches_test.cpp  beta_chatkit_test.cpp  beta_realtime_test.cpp  beta_realtime_transcription_test.cpp  beta_threads_test.cpp  chat_test.cpp  client_test.cpp  containers_test.cpp  conversations_test.cpp  evals_test.cpp  files_test.cpp  fine_tuning_graders_test.cpp  fine_tuning_test.cpp  images_test.cpp  messages_test.cpp  moderations_extra_test.cpp  multipart_test.cpp  responses_test.cpp  run_steps_test.cpp  runs_test.cpp  streaming_test.cpp  threads_test.cpp  uploads_test.cpp  utils_env_test.cpp  utils_qs_test.cpp  utils_time_test.cpp  utils_to_file_test.cpp  utils_uuid_test.cpp  utils_values_test.cpp  vector_stores_test.cpp  videos_test.cpp  webhooks_test.cpp
tests/api-resources/chat/completions/: messages.test.cpp
tests/network/live/audio/: audio_live_test_utils.hpp  speech.test.cpp  transcriptions.test.cpp  translations.test.cpp
tests/network/live/chat/completions/: completions.test.cpp  live_test_utils.hpp  messages.test.cpp
tests/support/: env_guard.hpp  mock_http_client.hpp
tools/: check_parity.py
